# text-similarity

./: .gitignore  README.md  app.py  main.py  pyproject.toml
config/: config.yaml
src/: data_preprocessing.py  embeddings.py  similarity_search.py
src/utils/: config.py  logger.py
static/: styles.css
templates/: index.html
