[tool.poetry]
name = "text-similarity"
version = "0.1.0"
description = ""
authors = ["isgr <isabellegoodridge@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
nltk = "^3.9.1"
sentence-transformers = "^3.3.1"
flask = "^3.1.0"
faiss-cpu = "^1.9.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
